# FitBird

./: .README  README.md  sensehat.py
Communication/Project Copy/: SensorReceiver.cpp  SensorReceiver.h  client.py  main  main.cpp
Communication/Testing Folder/: client.py  main  mainTestFile.cpp  otherServerImp.cpp
Desktop and Data structures/: Activity.cpp  Activity.h  DesktopMain.cpp  Facade.cpp  Facade.h  PythonSensor.cpp  PythonSensor.h  SensorController.cpp  SensorController.h  SensorReceiver.cpp  SensorReceiver.h  User.cpp  User.h  Walk.cpp  Walk.h  client.py  data.csv  main  saved_activities.csv  saved_users.csv
Desktop and Data structures/db/: saved_activities.csv  saved_users.csv
Desktop and Data structures/headers/: Facade.h  SensorController.h
Desktop and Data structures/py/: client.py
Desktop and Data structures/src/: Activity.cpp  Facade.cpp  PythonSensor.cpp  SensorController.cpp  SensorReceiver.cpp  User.cpp  Walk.cpp
FitBird/FitBird3307/: FitBird3307.pro  activities.cpp  activities.h  activities.ui  activity.cpp  activity.h  activityhistory.cpp  activityhistory.h  activityhistory.ui  client.py  dashboard.cpp  dashboard.h  dashboard.ui  facade.cpp  facade.h  main.cpp  mainmenu.cpp  mainmenu.h  mainmenu.ui  manageactivities.cpp  manageactivities.h  manageactivities.ui  manageprofile.cpp  manageprofile.h  manageprofile.ui  pythonsensor.cpp  user.h  (+11 more)
com/: SensorReceiver.cpp  SensorReceiver.h  a  client.py  main  mainTestFile.cpp  server.cpp  server.py  servercpp
sensehat/: eyes.py  sensehat.py
test/: CMakeLists.txt  sense  sense.cpp  sense.py
(+26 files in other folders)
